[package]
name = "bezier-rs-ffi"
version = "0.1.0"
rust-version = "1.66.0"
edition = "2021"
authors = ["Daan de Lange"]
description = "C++ Wrapper for bezier-rs"
license = "MIT"
keywords = ["bezier", "curve", "geometry", "2d", "graphics"]
categories = ["graphics", "mathematics"]
homepage = "https://github.com/daandelange/ofxBezierRs"
repository = "https://github.com/daandelange/ofxBezierRs"

[dependencies]
bezier-rs = "0.2.0"
glam = "0.22"
#glam = { version = "0.22", features = ["serde"] }
#libc = "0.2"

[lib]
#name = "bezier_rs_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3 # 3 for speed, "z" for space
lto = true # Optimize by stripping dead code etc
debug = 0
strip = true # "debuginfo"
codegen-units = 1 # force enable all, but slower
panic = "abort" # Less detailed error messages for smaller binary

